--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "14.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
